<resources>
    <string name="please_select_setting">Vui lòng chọn bối cảnh</string>
    <string name="app_name">Kid App</string>
    <string name="triangle">Triangle</string>
    <string name="hexagon">Hexagon</string>
    <string name="circle">Circle</string>
    <string name="setting">Bối cảnh</string>
    <string name="create_story">Tạo truyện</string>
    <string name="rectangle">Rectangle</string>
    <string name="navigation_drawer_open">Mở menu điều hướng</string>
    <string name="navigation_drawer_close">Đóng menu điều hướng</string>
    <string name="please_select_item">Vui lòng chọn ít nhất một vật phẩm</string>
    <string name="read_story">Đọc truyện</string>
    <string name="play_audio">Đọc truyện</string>
    <string name="share_story">Chia sẻ truyện</string>
    <string name="save_story">Lưu truyện</string>
    <string name="create_new_story">Tạo truyện mới</string>
    <string name="selected_items_count">Đã chọn: %1$d</string>
    <string name="generating_story_and_images">Đang tạo câu chuyện và hình ảnh minh họa...</string>
    <string name="scene_image_description">Hình ảnh minh họa cảnh</string>
    <string name="ai_story_creator">Tạo truyện AI</string>
    <string name="select_background_first">Vui lòng chọn bối cảnh trước</string>
    <string name="choose_setting">Chọn bối cảnh</string>
    <string name="choose_character">Chọn nhân vật</string>
    <string name="choose_item">Chọn vật phẩm</string>
    <string name="generating_story">Đang tạo câu chuyện...</string>
    <string name="image_item">Hình ảnh minh họa</string>
    <string name="scene_image"></string>
    <string name="element_image">Element Image</string>
</resources>